# lr

./: .gitignore  .pre-commit-config.yaml  lr_ccw90_working.py  pyproject.toml  readme.md  requirements.txt
src/medical_doc_processor/: __init__.py  cli.py
src/medical_doc_processor/components/: document_components.py
src/medical_doc_processor/core/: image_loader.py  orientation_detector.py  region_extractor.py  spiral_generator.py  square_detector.py
src/medical_doc_processor/generators/: __init__.py  spiral_document_generator.py
src/medical_doc_processor/utils/: file_utils.py  text_utils.py  visualization.py
tests/: conftest.py  create_test_images.py  run_tests.py  test_document_generator.py  test_orientation_detector.py  test_visual_validation.py
